# stencil_buffer_object_outilne

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: camera.cpp  camera.h  glad.c  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
src/shaders/: fragment.glsl  shaderSingleColor.glsl
